feat(generator): inbound element template generation (#1958)
* feat(generator): inbound element template generation

* support inbound template generation in maven plugin

* support inbound template generation in maven plugin

* support id and name override for specific element types when multiple are generated

* support generated values in properties, add tests

* add tests for more default properties

* switch to generator for webhook connector

* add new element templates for webhook

* support custom template file names via plugin config

* clean up

* apply suggestions

* bug fixing

* remove soap changes